--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
     <section>
        <h2>What are we doing</h2>  
        <ul> 
-         <li><img src="./images/Rectangle70.jpg" alt="Rectangle70" width="360" height="300"></li>
-         <li><img src="./images/Rectangle71.jpg" alt="Rectangle72" width="360" height="300"></li>
+         <li><img src="./images/rectangle70.jpg" alt="rectangle70" width="360" height="300"></li>
+         <li><img src="./images/rectangle71.jpg" alt="rectangle71" width="360" height="300"></li>
+         <li><img src="./images/rectangle72.jpg" alt="rectangle72" width="360" height="300"></li>
        </ul> 
        <ul>                   
         <li>
