--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         for Your Business</h1>
         <button type="button">Order Service</button>
     </section>
-    <section>
+      <section>
       <ul>
         <li>
            <h3>Strategy</h3>
@@ -49,7 +49,7 @@
             <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </li>
       </ul>                                                
-     </section>
+    </section>
     <section>
        <h2>What are we doing</h2>  
        <ul> 
@@ -57,7 +57,10 @@
          <li><img src="./images/rectangle71.jpg" alt="rectangle71" width="360" height="300"></li>
          <li><img src="./images/rectangle72.jpg" alt="rectangle72" width="360" height="300"></li>
        </ul> 
-       <ul>                   
+    </section>
+    <section>
+      <h2>Our Team</h2>
+      <ul>                   
         <li>
           <img src="./images/img1.jpg" alt="Mark" width="264" height="260"/>
           <h3>Mark Guerrero</h3>
@@ -69,17 +72,17 @@
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="./images/img3.jpg" alt="Camila" width="264" height="260"/>
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
+           <img src="./images/img3.jpg" alt="Camila" width="264" height="260"/>
+            <h3>Camila Garcia</h3>
+             <p>Marketing</p>
         </li>
-        <li>
-          <img src="./images/img4.jpg" alt="Daniel" width="264" height="260"/>
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </li>
-        </ul>
-    </section>
+          <li>
+              <img src="./images/img4.jpg" alt="Daniel" width="264" height="260"/>
+              <h3>Daniel Wilson</h3>
+              <p>UI Designer</p>
+            </li>
+      </ul>                               
+    </section>               
   </main>
   <footer>
     <a href="./index.html">WebStudio</a>
